<resources>
    <string name="app_name">Tucson</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="login">Facebook Login</string>
    <string name="mappa">Map</string>
    <string name="info">App Info</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">625462257657619</string>
    // if your App ID is 1234567, you should use fb1234567
    <string name="fb_login_protocol_scheme">fb625462257657619</string>


    <string name="send_position">Send Location</string>
    <string name="del_position">Delete Location</string>
    <string name="error_send_position">Error during the location send</string>
    <string name="position_send">Location sent</string>
    <string name="my_position">My position</string>
    <string name="current_position">This is my current position</string>
    <string name="historical_positions">Historical positions</string>
    <string name="must_logged">Attention, you must be logged in to view the locations on the map</string>
    <string name="info_text"><b>Tucson</b> is an app that is based on the geolocation of your Hyundai Tucson. In collaboration with the facebook group <b>\"Hyundai Tucson Italia\"</b>\n\n<i>Available functions</i>:\n\n<b>Facebook Login</b>: Login with your facebook account.\n\n<b>Map</b>: It allows you to display on all Hyundai Tucson area who have sent their position through the App. Show only the last position sent by each user. Ability to send your position even anonymously\n\n<b>Historical positions</b>: It allows you to view the area all the positions that you have sent so far. Displays only the position sent to you. You can clear the positions sent by selecting the marker info window\n\n<b>Settings</b>: It lets you choose some settings such as the maximum number of positions to be displayed in the historic or whether or not to send even the email address associated with your Facebook account\n\n<b>Info</b>: About of application functionality.</string>
    <string name="allow_view_email">When you send your location also send your email address</string>
    <string name="max_historical_positions">Maximum number of visible positions in the feature "Historical positions"</string>
    <string name="no_internet">No internet connection</string>
    <string name="gps_activation">GPS activation</string>
    <string name="enable_gps">Would you like to enable location based services?</string>
    <string name="sent_on">Sent on</string>
    <string name="no_gps">Warning: Your device does not have GPS, application unusable</string>
    <string name="no_permission">permission denied</string>
    <string name="delete_position_title">Delete location</string>
    <string name="delete_position">Do you want to delete this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_anonymous">Send anonymous location</string>
    <string name="anonymous">Anonymous</string>
    <string name="collaboration">angelarussoaav@gmail.com\nIn collaboration with the facebook group\n <b>\"Hyundai Tucson Italia\"</b></string>
    <string name="hyundai_tucson_italia">Hyundai Tucson Italia</string>
    <string name="join">Join with us</string>

</resources>
