<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/mappa" />
        <item
            android:id="@+id/nav_all_map_positions"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/historical_positions" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/com_facebook_button_icon_white"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting_dark"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_dialog_info"
            android:title="@string/info" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>
